<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iu.ContactoActivity">

    <ImageView
        android:id="@+id/ivContact"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardContact"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="235dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/color_card"
        app:cardCornerRadius="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Nombre del contacto y botón de edición -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/nombre_contacto"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/etNombre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:inputType="textPersonName"
                    tools:text="Álvaro" />

                <Button
                    android:id="@+id/btnEditar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_edit" />
            </LinearLayout>


            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@android:color/darker_gray" />

            <!-- Teléfono -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTelfs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono_contacto" />

                <Spinner
                    android:id="@+id/spTelefonos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@android:color/darker_gray" />

            <!-- Fecha de nacimiento -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvFechaNac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_cumple" />

                <TextView
                    android:id="@+id/etFechaNac"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="false"
                    android:hint="Seleccione fecha"
                    tools:text="21/08/1993" />
            </LinearLayout>


            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@android:color/darker_gray" />

            <!-- Mensaje -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvMensaje"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mensaje_title" />

                <EditText
                    android:id="@+id/etMensaje"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:hint="@string/mensaje_intrs"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@android:color/darker_gray" />

            <!-- Tipo de notificación -->
            <TextView
                android:id="@+id/tvTipoNotificacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_notificacion" />

            <LinearLayout
                android:id="@+id/llNotificaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cbSms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/modo_sms" />

                <CheckBox
                    android:id="@+id/cbNoti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/modo_noti" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="8dp"
                android:background="@android:color/darker_gray" />

            <!-- Botón Guardar -->
            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/guardar_contacto" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
